fixed bug , it was about z-index had to change the whole layout z index to 1000 fo that any other fixed element stays underneath them

--- a/src/components/d3/d3.css
+++ b/src/components/d3/d3.css
@@ -19,7 +19,9 @@
     height: 300px;
     cursor: pointer;
     perspective: 1000px;
+    color: red;
 }
+
 .project-card img {
     height: 100%;
     padding: 10px 15px;
